[metadata]
name = PHIDIAS
version = 1.1.0
description = PytHon Interactive Declarative Intelligent Agent System
author = Corrado Santoro
license = MIT
platform = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    phidias
install_requires =
    requests
    parse

python_requires = >= 3.6
package_dir = 
    =lib
zip_safe = no

[options.extras_require]
win = pyreadline3;
unix = gnureadline;